css/styles.css
/*--- Global ---*/
:root {
  font-size: 16px;
  font-family: 'Roboto';
  --text-primary: #b6b6b6;
  --text-secondary: #ececec;
  --bg-primary: #23232e;
	--bg-secondary: #141418;
	--bg-tertiary: #1e2b38;
	--transition-speed: 600ms;
}

body {
  color: black;
  background-color: white;
  margin: 0;
  padding: 0;
}

body::-webkit-scrollbar {
  width: 0.25rem;
}

body::-webkit-scrollbar-track {
  background: #1e1e24;
}

body::-webkit-scrollbar-thumb {
  background: #3bebc2;
}

main {
  margin-left: 5rem;
  padding: 1rem;
}

.subtitle {
	color: var(--text-primary);
}

/*--- Navigation ---*/
.navbar {
  position: fixed;
	background-color: var(--bg-primary);
	transition: width 200ms ease;

}

.navbar-nav {
	list-style: none;
	padding: 0;
	margin: 0;
	display: flex;
	flex-direction: column;
	align-items: center;
	height: 100%;
}

.nav-item {
	width: 100%;
}

.nav-item:last-child {
	margin-top: auto;
}

.nav-link {
	display: flex;
	align-items: center;
	height: 5rem;
	color: var(--text-primary);
	text-decoration: none;
	filter: grayscale(100%) opacity(0.7);
	transition: var(--transition-speed);
}

.nav-link:hover {
	filter: grayscale(0%) opacity(1);
	background: var(--bg-secondary);
	color: var(--text-secondary);
}

.link-text {
	display: none;
	margin-left: 1rem;
}

.nav-link i {
	font-size: 2rem;
	margin: 0 1.5rem;
}

.navbar:hover {
	width: 16rem;
}

.navbar:hover .link-text {
	display: block;
}

.fa-primary {
	color: #ff7eee;
}

.fa-secondary {
	color: #df49a6;
}

.fa-primary,
.fa-secondary {
	transition: var(--transition-speed);
}


/*--- Logo ---*/

.logo {
	font-weight: bold;
	text-transform: uppercase;
	margin-bottom: 1rem;
	text-align: center;
	color: var(--text-secondary);
	background: var(--bg-secondary);
	font-size: 1.5rem;
	letter-spacing: 0.3ch;
	width: 100%; 
}

.logo i {
	transform: rotate(0deg);
	transition: transform var(--transition-speed);
}

.navbar:hover .logo i {
	transform: rotate(-180deg);
}


/*--- Gallery ---*/

.gallery {
	text-align: center;
	padding: 32px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

.column {
  flex: 25%;
	max-width: 33%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}


/*--- Badges ---*/

.badges {
	text-align: left;
}

.badges a {
	background: var(--bg-tertiary);
}


/*--- Responsive ---*/

@media only screen and (max-width: 600px) {
	.navbar {
		bottom: 0;
		height: 5rem;
		width: 100vw;
	}

	.navbar:hover {
		width: 100vw;
	}
	
	.navbar:hover .link-text {
		display: none;
	}

	.logo {
		display: none;
	}

	.navbar-nav {
		flex-direction: row;
	}

	.nav-link {
		justify-content: center;
	}

	main {
		margin: 0;
	}

	.column {
    flex: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width: 600px) {
	.navbar {
		top: 0;
		width: 5rem;
		height: 100vh;
	}

	.navbar:hover {
		width: 16rem;
	}

	.navbar:hover .link-text {
		display: inline;
		transition: opacity var(--transition-speed);
	}
}

